# opengl-basics

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Mesh.cpp  Mesh.hpp  README.md  Shader.cpp  Texture.cpp  Window.hpp  main.cpp  vcpkg.json
include/: Camera.hpp  Light.hpp  Shader.hpp  Texture.hpp
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Light.cpp  Shader.cpp  Window.cpp  main.cpp
